* Fixed Viewer linking.
* Fixed Eigen package name in PKGBUILDs.
* Updated build script and added .travis.yml file.
* Updated .travis.yml file.
* Updated build files.
* Updated .travis.yml file.
* Updated build files and fixed compilation issues.

SphereSim 3.0.1:
* Corrected version number.
* Removed local ObjectTester from clients.
* Updated license information and fixed mingw-w64 PKGBUILD.
* Fixed minor code issues.

SphereSim 3.0.0:
* Improved package releasing script and added automatic version number.
* Added NO_OPENMP flag to control OpenMP in server.
* Added automatic variable transmission. Incompatible to prior versions.

SphereSim 2.5.1:
* Improved build scripts and added OpenMP flag to Server.pro.
* Improved SimulationWorker and WorkQueue of server and fixed segfaults.

SphereSim 2.5.0:
* Improved Server to execute all actions in a queue.
* Added methods to clients to react on server disconnection.
* Improved Viewer windows: removed version from title and fixing size.
* Added comparison of adaptive and static stepsize to Tester.
* Added QMake build files.

SphereSim 2.4.4:
* Added Array class and modified TwoDimArray to use the new class. No speed change.
* Switched from QVector to custom Array class. Nearly no speed improve.
* Improved code formatting.
* Added flags to switch between STL, Qt and custom array class in Server.
* Added automatic version number to Viewer title.
* Improved array handling in Server.
* Added automatic uploading to build script.

SphereSim 2.4.3:
* Improved simulated systems and Benchmark client.
* Improved simulated systems again.
* Improved simulation calculations; big error decrease.
* Added methods to control step division in calculations.
* Improved simulated systems.
* Improved Gnuplot script to output PDF files.
* Switched to .zip extension for mingw-w64 package.
* Improved output of SystemCreator class.
* Added new simulated system to SimulationGrapher.
* Added methods to measure step calculation time.