@@ -5,6 +5,7 @@
 * Updated build files.
 * Updated .travis.yml file.
 * Updated build files and fixed compilation issues.
+* Improved .travis.yml file.
 
 SphereSim 3.0.1:
 * Corrected version number.
